# ice-cream-dataops

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/oee_timeseries/: handler.py
