[tool.poetry]
name = "ice-cream-dataops"
version = "0.1.0"
authors = ["Abdulrahman Alshehri <abdulrahman.alshehr@cntxt.com>"]
description = "CDF Bootcamp project"

[tool.poetry.dependencies]
python = "3.11.*"
cognite-toolkit = "0.3.0b4"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
